--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,18 +50,21 @@
           <ul class="nav navbar-nav">
 		  <li><%= link_to "products", products_path  %></li>
 	</ul>
-		  <% if current_user -%>
-			  <ul class="nav navbar-nav navbar-right">
+		  <ul class="nav navbar-nav navbar-right">
+        <% if current_user -%>
 		  		<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %>
 					<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "sign_out", destroy_user_session_path %>
+            <li><%= link_to "edit user", edit_user_registration_path%></li>
+            <li role="separator" class="divider"></li>
+						<li><%= link_to "sign out", destroy_user_session_path %></li>
 					</ul>
-				</li>
+          </li>
+        <% else %>
+      <li><%= link_to "sign in", new_user_session %></li>
 			</ul>
-		<% else %>
-			<p class="navbar-text navbar-right"><a href="/users/sign_in" class="navbar-link">sign_in</a></p>	
+			
 		<% end -%>
         </div>
       </div>
