--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
 					</ul>
           </li>
         <% else %>
-      <li><%= link_to "sign in", new_user_session %></li>
+      <li><%= link_to "sign up", new_user_registration_path %></li>
 			</ul>
 			
 		<% end -%>
