--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,16 +53,16 @@
 		  <ul class="nav navbar-nav navbar-right">
         <% if current_user -%>
 		  		<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %>
+					<a id="dLabel" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %>
 					<span class="caret"></span></a>
-					<ul class="dropdown-menu">
+					<ul class="dropdown-menu" aria-labelledby="dLabel">
             <li><%= link_to "edit user", edit_user_registration_path%></li>
             <li role="separator" class="divider"></li>
 						<li><%= link_to "sign out", destroy_user_session_path %></li>
 					</ul>
           </li>
         <% else %>
-      <li><%= link_to "sign up", new_user_registration_path %></li>
+      <li><%= link_to "sign in", new_user_session_path %></li>
 			</ul>
 			
 		<% end -%>
