--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
     <%= f.label :password, class: "col-sm-2 control-label" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
     <div class="col-sm-5">
     <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
     </div>
