--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <h2>Sign up</h2>
 </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => { :class => "form-horizontal product" }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: => { :class => "form-horizontal product" }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="form-group">
