--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,9 +16,10 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :password, class: "col-sm-2 control-label" %> <i>(leave blank if you don't want to change it)</i>
+    <%= f.label :password, class: "col-sm-2 control-label" %>
     <div class="col-sm-5">
     <%= f.password_field :password, autocomplete: "off", class: "form-control"  %>
+    <i>(leave blank if you don't want to change it)</i>
     </div>
     <% if @minimum_password_length %>
       <em><%= @minimum_password_length %> characters minimum</em>
@@ -33,21 +34,27 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :current_password, class: "col-sm-2 control-label" %> <i>(we need your current password to confirm your changes)</i>
+    <%= f.label :current_password, class: "col-sm-2 control-label" %>
     <div class="col-sm-5">
     <%= f.password_field :current_password, autocomplete: "off", class: "form-control"  %>
+    <i>(we need your current password to confirm your changes)</i>
     </div>
   </div>
 
-  <div class="actions">
+  <div class="form-group">
   <div class="col-sm-offset-2 col-sm-10">
     <%= f.submit "Update",class:"btn btn-default"  %>
     </div>
   </div>
 <% end %>
 
+<div class="page-header">
 <h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+</div>
+  <div class="form-group">
+	  <label class="col-sm-2 control-label">Unhappy?</label>
+    		<div class="col-sm-5">
+			<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete ,class:"btn btn-default" %>
+		</div>	
 
 <%= link_to "Back", :back %>
