--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
 	<%= link_to "Home", root_path,class: "navbar-brand"  %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "product", "#"  %></li>
+            <li><%= link_to "products", products_show_path  %></li>
 	  </ul>
           <ul class="nav navbar-nav navbar-right">
 		<% if current_user -%>
