--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,32 +3,36 @@
 </div>
 
 <table class="table table-hover">
-	      <thead>
-		 <tr>
-			 <th>#</th>
-			 <th>First Name</th>
-							            <th>Last Name</th>
-								              <th>Username</th>
-									              </tr>
-										            </thead>
-											          <tbody>
-													          <tr>
-															            <th scope="row">1</th>
-																              <td>Mark</td>
-																	                <td>Otto</td>
-																			          <td>@mdo</td>
-																				          </tr>
-																					          <tr>
-																							            <th scope="row">2</th>
-																								              <td>Jacob</td>
-																									                <td>Thornton</td>
-																											          <td>@fat</td>
-																												          </tr>
-																													          <tr>
-																															            <th scope="row">3</th>
-																																              <td>Larry</td>
-																																	                <td>the Bird</td>
-																																			          <td>@twitter</td>
-																																				          </tr>
-																																					        </tbody>
-																																						    </table>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>title</th>
+          <th>origin_id</th>
+          <th>content_type</th>
+          <th>provider</th>
+          <th>operation</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>123</td>
+          <td>law</td>
+          <td>lnc</td>
+          <td>
+          	<ul>
+				<label class="radio">
+				  <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+				</label>
+				<label class="radio">
+				  <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+				</label>
+				<label class="radio">
+				  <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
+				</label>
+          	</ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
