--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,17 +6,17 @@
       <thead>
         <tr>
           <th>#</th>
-          <th>title</th>
-          <th>origin_id</th>
-          <th>content_type</th>
-          <th>provider</th>
-          <th>operation</th>
+          <th>Title</th>
+          <th>Origin_id</th>
+          <th>Content_type</th>
+          <th>Provider</th>
+          <th>Operation</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row">1</th>
-          <td>Mark</td>
+	  <td><a class="text-primary" href="#" target="_blank" >Mark</a></td>
           <td>123</td>
           <td>law</td>
           <td>lnc</td>
