--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,13 +23,16 @@
           <td>
           	<ul>
 				<label class="radio">
-				  <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+				  <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1"> 1
 				</label>
 				<label class="radio">
-				  <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+				  <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="2"> 2
 				</label>
 				<label class="radio">
-				  <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
+				  <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="3"> 3
+				</label>
+				<label class="radio">
+				  <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="4"> 4
 				</label>
           	</ul>
           </td>
