--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,6 +10,7 @@
           <th>Origin_id</th>
           <th>Content_type</th>
           <th>Provider</th>
+          <th>Score</th>
           <th>Operation</th>
         </tr>
       </thead>
@@ -36,6 +37,7 @@
 				</label>
           	</ul>
           </td>
+          <td><a href="#" class="btn btn-info" role="button">Submit</a></td>>
         </tr>
       </tbody>
     </table>
