--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -81,4 +81,4 @@
 @import "twitter/bootstrap/utilities.less";
 @import "twitter/bootstrap/responsive-utilities.less";
 
-@link-color: #ff0000;
+@link-color: #777777;
