--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,16 +67,15 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
           <%= bootstrap_flash %>
           <%= yield %>
-        </div>
       </div><!--/row-->
 
-      <footer>
+      <footer class="footer navbar-fixed-bottom bg-success">
+	<div class="container col-md-offset-4">
         <p>&copy; Company 2017</p>
+	</div>
       </footer>
-
     </div> <!-- /container -->
 
   </body>
