--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -37,7 +37,7 @@
 				</label>
           	</ul>
           </td>
-          <td><a href="#" class="btn btn-info" role="button">Submit</a></td>>
+          <td><a href="#" class="btn btn-info" role="button">Submit</a></td>
         </tr>
       </tbody>
     </table>
