--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -57,4 +57,4 @@
 			<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete ,class:"btn btn-default" %>
 		</div>	
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back,class:"btn btn-default" %>
