--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,10 +45,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-	<%= link_to "Home", root_path,class: "navbar-brand"  %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "products", products_show_path  %></li>
+		<li><%= link_to "Home", root_path,class: "navbar-brand"  %></li>
+		<% navbar = Hash["products" => products_show_path] %>
+		<% for k , v in navbar %>
+		<li <% if k== controller.controller_name -%> class="active" <% end %>> <%= link_to k, v  %></li>
+		<% end -%>
 	  </ul>
           <ul class="nav navbar-nav navbar-right">
 		<% if current_user -%>
