--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
       </div><!--/row-->
 
       <footer class="footer navbar-fixed-bottom bg-success">
-	<div class="container col-md-offset-4">
+	<div class="col-md-4 col-md-offset-5">
         <p>&copy; Company 2017</p>
 	</div>
       </footer>
