--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -67,7 +67,7 @@
 			data:$("#"+id).serialize(),
 			url:'/users',//目标地址
 			success:function(data){
-				alert(data);
+				alert("Success");
 			},
 			error:function(){
 				alert("error");
